feat: private로 변경

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div id="full-page">
       <div class="section s0">
         <div class="section_home">
-          <h2>Web Publisher</h2>
+          <h2>Front-end developer</h2>
           <h1>PORTFOLIO</h1>
           <div id="home_right">
             <div id="home_right_txt">2020.09.START</div>
@@ -66,7 +66,7 @@
               <div><img src="img/sehyeon.jpg" alt="사진" /></div>
               <ul>
                 <li>김세현 / Kim SeHyeon</li>
-                <li><i class="fas fa-user"></i>Web Publisher</li>
+                <li><i class="fas fa-user"></i>Front-end developer</li>
                 <li><i class="fas fa-calendar"></i>1990.11.20</li>
                 <li><i class="fas fa-map-marker-alt"></i>서울 영등포구 거주</li>
               </ul>
