--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>웹 퍼블리셔 포트폴리오 | 김세현</title>
+    <title>웹 개발자 포트폴리오 | 김세현</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -154,7 +154,8 @@
       <!--section s1-->
       <div class="section s2">
         <div class="section_content section_content2">
-          <h2>SKILL</h2>
+          <!-- <h2>SKILL</h2> -->
+          <h2>Stacks 기술 스택</h2>
           <div class="skill_wrapper">
             <div class="skill_item">
               <h3 class="sk_title">HTML5 / CSS3</h3>
@@ -219,7 +220,7 @@
                 </ul>
               </div>
             </div>
-            <div class="skill_item">
+            <!-- <div class="skill_item">
               <h3 class="sk_title">
                 웹개발을 위한 기획과 디자인 (Photoshop / Illustrator)
               </h3>
@@ -245,6 +246,31 @@
                   <li>
                     <img src="img/check2.png" alt="check" />Illustrator (중)
                   </li>
+                </ul>
+              </div>
+            </div> -->
+            <div class="skill_item">
+              <h3 class="sk_title">Git을 활용한 소스코드 버전 관리 및 협업</h3>
+              <div class="sk_txt_box">
+                <ul class="sk_txt sk_txt2 sk_txt_design">
+                  <li>
+                    <img src="img/check2.png" alt="check" />
+                    Git을 활용한 소스코드 버전 관리 및 협업을 할 수 있습니다.
+                  </li>
+                  <li>
+                    <img src="img/check2.png" alt="check" />
+                    Github, Gitlab등을 사용하여 프로젝트 관리 경험이 있습니다.
+                  </li>
+                  <!-- <li>
+                    <img src="img/check2.png" alt="check" />사용자 요구에 따른
+                    PC, 모바일, 반응형 디자인 및 웹퍼블리싱 가능
+                  </li>
+                  <li>
+                    <img src="img/check2.png" alt="check" />Photoshop (중)
+                  </li>
+                  <li>
+                    <img src="img/check2.png" alt="check" />Illustrator (중)
+                  </li> -->
                 </ul>
               </div>
             </div>
