--- a/index.html
+++ b/index.html
@@ -131,15 +131,25 @@
                   <div class="ct_title"><h3>CONTACT</h3></div>
                   <div class="ct_txt">
                     <ul>
-                      <li><img src="img/con01.png" alt="" /></li>
+                      <li>
+                        <img
+                          style="border-radius: 10px"
+                          src="img/GitHub-Mark.png"
+                          alt="github"
+                        />
+                      </li>
+                      <li>hyonie-Kim</li>
+                    </ul>
+                    <ul>
+                      <li><img src="img/con01.png" alt="phone" /></li>
                       <li>010-5838-4884</li>
                     </ul>
                     <ul>
-                      <li><img src="img/con2.png" alt="" /></li>
+                      <li><img src="img/con2.png" alt="mail" /></li>
                       <li>dev.hyonie@gmail.com</li>
                     </ul>
                     <ul>
-                      <li><img src="img/con3.png" alt="" /></li>
+                      <li><img src="img/con3.png" alt="kakao" /></li>
                       <li>ID: sehyeon1120</li>
                     </ul>
                   </div>
@@ -154,14 +164,15 @@
       <!--section s1-->
       <div class="section s2">
         <div class="section_content section_content2">
-          <!-- <h2>SKILL</h2> -->
-          <h2>Stacks 기술 스택</h2>
+          <h2>SKILL</h2>
+          <!-- <h2>Stacks 기술 스택</h2> -->
           <div class="skill_wrapper">
             <div class="skill_item">
-              <h3 class="sk_title">HTML5 / CSS3</h3>
+              <!-- <h3 class="sk_title">HTML5 / CSS3</h3> -->
+              <h3 class="sk_title">Frontend</h3>
               <div class="sk_txt_box">
                 <ul class="sk_txt sk_txt1">
-                  <li>
+                  <!-- <li>
                     <img src="img/check2.png" alt="check" />웹 접근성 및 웹
                     표준성을 준수한 코딩 가능
                   </li>
@@ -176,6 +187,12 @@
                   <li>
                     <img src="img/check2.png" alt="check" />CSS 이용하여 다양한
                     화면 구현 가능하며 미디어쿼리로 반응형 프로젝트 코딩 가능
+                  </li> -->
+                  <li>
+                    <img src="img/html.png" alt="html" />
+                  </li>
+                  <li>
+                    <img src="img/React_logo.png" alt="html" />
                   </li>
                 </ul>
                 <div class="graph">
@@ -184,10 +201,11 @@
               </div>
             </div>
             <div class="skill_item">
-              <h3 class="sk_title">JavaScript / jQuery</h3>
+              <!-- <h3 class="sk_title">JavaScript / jQuery</h3> -->
+              <h3 class="sk_title">Backend</h3>
               <div class="sk_txt_box">
                 <ul class="sk_txt sk_txt1">
-                  <li>
+                  <!-- <li>
                     <img src="img/check2.png" alt="check" />제어문, 함수, 객체,
                     이벤트 등 숙지 완료
                   </li>
@@ -199,7 +217,7 @@
                     <img src="img/check2.png" alt="check" />제이쿼리 플러그인
                     적용 가능(swiper, fullpage, aos, circular rotating slider
                     등)
-                  </li>
+                  </li> -->
                 </ul>
                 <div class="graph">
                   <div class="graph_bar" style="width: 80%"></div>
@@ -208,16 +226,16 @@
             </div>
 
             <div class="skill_item">
-              <h3 class="sk_title">오피스 활용능력</h3>
+              <h3 class="sk_title">Deployment</h3>
               <div class="sk_txt_box">
-                <ul class="sk_txt sk_txt2 sk_txt_office">
+                <!-- <ul class="sk_txt sk_txt2 sk_txt_office">
                   <li><img src="img/check2.png" alt="check" />MS Word (중)</li>
                   <li>
                     <img src="img/check2.png" alt="check" />MS Powerpoint (상)
                   </li>
                   <li><img src="img/check2.png" alt="check" />MS Excel (중)</li>
                   <li><img src="img/check2.png" alt="check" />한글 (상)</li>
-                </ul>
+                </ul> -->
               </div>
             </div>
             <!-- <div class="skill_item">
@@ -250,7 +268,8 @@
               </div>
             </div> -->
             <div class="skill_item">
-              <h3 class="sk_title">Git을 활용한 소스코드 버전 관리 및 협업</h3>
+              <h3 class="sk_title">Version Control</h3>
+              <!-- <h3 class="sk_title">Git을 활용한 소스코드 버전 관리 및 협업</h3> -->
               <div class="sk_txt_box">
                 <ul class="sk_txt sk_txt2 sk_txt_design">
                   <li>
@@ -279,7 +298,61 @@
       </div>
       <div class="section s3">
         <div class="section_content section_content3">
+          <!-- 포트폴리오 1============================================== -->
           <div class="slide slide_1">
+            <h2>&lt;MileEASY&gt; MBTI 테스트 통한 여행지 추천 사이트</h2>
+            <div class="pf_img_container">
+              <div class="pf_img_1">
+                <img
+                  src="img/mileeasy_desktop.png"
+                  alt="MileEASY_DESKTOP_Image"
+                />
+              </div>
+              <div class="pf_img_2">
+                <img src="img/mileeasy_ipad.png" alt="MileEASY_ipad_Image" />
+              </div>
+              <div class="pf_img_3">
+                <img src="img/mileeasy_phone.png" alt="MileEASY_phone_Image" />
+              </div>
+            </div>
+            <div class="pf_txt_container">
+              <h3 class="pf_title">MileEASY</h3>
+              <div class="mpf_img mpf_img_2">
+                <img src="img/mileEASY.png" alt="" />
+              </div>
+              <div>
+                <span class="pf_name">주요기능:</span>
+                <span class="pf_txt"
+                  >여행 MBTI 테스트를 통해, 사용자 성향에 맞춘 여행지를 추천하는
+                  사이트를 구현한다.
+                </span>
+              </div>
+              <div>
+                <span class="pf_name">역할:</span>
+                <span class="pf_txt">2022.12 (4인팀 프로젝트)</span>
+              </div>
+              <div>
+                <span class="pf_name">Frontend: </span>
+                <span class="pf_txt">jQuery,Bootstrap</span>
+              </div>
+              <div>
+                <span class="pf_name">Backend:</span>
+                <span class="pf_txt">Node.js, Express</span>
+              </div>
+              <div>
+                <span class="pf_name">Database:</span>
+                <span class="pf_txt">MySql</span>
+              </div>
+              <div>
+                <span class="pf_name">Deployment:</span>
+                <span class="pf_txt">AWS (EC2)</span>
+              </div>
+              <div class="pf_gosite">
+                <a href="http://3.35.216.78:8080/" target="_blank">GO SITE</a>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="slide slide_1">
             <h2>PORTFOLIO 1</h2>
             <div class="pf_img_container">
               <div class="pf_img_1">
@@ -329,7 +402,8 @@
                 >
               </div>
             </div>
-          </div>
+          </div> -->
+          <!-- 포트폴리오 2============================================== -->
           <div class="slide slide_2">
             <h2>PORTFOLIO 2</h2>
             <div class="pf_img_container">
@@ -386,6 +460,7 @@
               </div>
             </div>
           </div>
+
           <div class="slide slide_3">
             <h2>PORTFOLIO 3</h2>
             <div class="pf_img_container">
@@ -476,14 +551,15 @@
         <div id="footer">
           <div class="fp_name">
             <ul class="fp_name_box">
-              <li>KITIA</li>
+              <li>MileEASY</li>
               <li>DM 엔터테인먼트</li>
               <li>ArmaniBeauty</li>
               <!--                        <li>휴롬</li>-->
             </ul>
           </div>
           <div id="footer_txt">
-            Copyright 2022.Kim SeHyeon All rights reserved
+            © 2023. Kim Se Hyeon. All rights reserved.
+            <!-- Copyright 2022.Kim SeHyeon All rights reserved -->
           </div>
         </div>
       </div>
