feat: 포트폴리오2

--- a/index.html
+++ b/index.html
@@ -403,8 +403,62 @@
               </div>
             </div>
           </div> -->
-          <!-- 포트폴리오 2============================================== -->
           <div class="slide slide_2">
+            <h2>search_library</h2>
+            <div class="pf_img_container">
+              <div class="pf_img_1">
+                <img src="img/project_img3.png" alt="" />
+              </div>
+
+              <div class="pf_img_2">
+                <img src="img/project2_2.png" alt="" />
+              </div>
+              <div class="pf_img_3">
+                <img src="img/project2_3.png" alt="" />
+              </div>
+            </div>
+            <div class="pf_txt_container">
+              <h3 class="pf_title">search_library</h3>
+              <div class="mpf_img mpf_img_2">
+                <img src="img/m_pro03.png" alt="" />
+              </div>
+              <div>
+                <span class="pf_name">주요기능:</span>
+                <span class="pf_txt"
+                  >알라딘 Open API를 이용한 도서 데이터 검색 사이트
+                </span>
+              </div>
+              <div>
+                <span class="pf_name">역할:</span>
+                <span class="pf_txt">2023.01 (단독 프로젝트)</span>
+              </div>
+              <div>
+                <span class="pf_name">Frontend: </span>
+                <span class="pf_txt">React, Bootstrap</span>
+              </div>
+              <div>
+                <span class="pf_name">Backend:</span>
+                <span class="pf_txt">Node.js, Express</span>
+              </div>
+              <div>
+                <span class="pf_name">Database:</span>
+                <span class="pf_txt">MySql</span>
+              </div>
+              <div>
+                <span class="pf_name">Deployment:</span>
+                <span class="pf_txt">AWS (EC2)</span>
+                <!-- <span class="pf_txt">HTML5, CSS3, jQuery, JavaScript</span> -->
+              </div>
+              <div class="pf_gosite">
+                <a href="https://sehyeon90.github.io/armani/" target="_blank"
+                  >GO SITE</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <!-- 포트폴리오 3============================================== -->
+          <div class="slide slide_3">
             <h2>PORTFOLIO 2</h2>
             <div class="pf_img_container">
               <div class="pf_img_1">
@@ -461,16 +515,16 @@
             </div>
           </div>
 
-          <div class="slide slide_3">
+          <!-- <div class="slide slide_3">
             <h2>PORTFOLIO 3</h2>
             <div class="pf_img_container">
               <div class="pf_img_1">
                 <img src="img/project_img3.png" alt="" />
               </div>
-              <!--
+              
                         <div class="pf_img_2"><img src="img/project2_2.png" alt=""></div>
                         <div class="pf_img_3"><img src="img/project2_3.png" alt=""></div>
--->
+
             </div>
             <div class="pf_txt_container">
               <h3 class="pf_title">ArmaniBeauty</h3>
@@ -509,7 +563,8 @@
                 >
               </div>
             </div>
-          </div>
+          </div> -->
+
           <!--
                 <div class="slide slide_4">
                     <h2>PORTFOLIO 4</h2>
@@ -552,8 +607,8 @@
           <div class="fp_name">
             <ul class="fp_name_box">
               <li>MileEASY</li>
+              <li>search_library</li>
               <li>DM 엔터테인먼트</li>
-              <li>ArmaniBeauty</li>
               <!--                        <li>휴롬</li>-->
             </ul>
           </div>
