--- a/index.html
+++ b/index.html
@@ -407,20 +407,23 @@
             <h2>search_library</h2>
             <div class="pf_img_container">
               <div class="pf_img_1">
-                <img src="img/project_img3.png" alt="" />
+                <img
+                  src="img/search_library_desktop.png"
+                  alt="search_library_img"
+                />
               </div>
 
-              <div class="pf_img_2">
+              <!-- <div class="pf_img_2">
                 <img src="img/project2_2.png" alt="" />
               </div>
               <div class="pf_img_3">
                 <img src="img/project2_3.png" alt="" />
-              </div>
+              </div> -->
             </div>
             <div class="pf_txt_container">
               <h3 class="pf_title">search_library</h3>
               <div class="mpf_img mpf_img_2">
-                <img src="img/m_pro03.png" alt="" />
+                <img src="img/search_library.png" alt="" />
               </div>
               <div>
                 <span class="pf_name">주요기능:</span>
