--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <nav id="navTop">
       <div id="navTop_box">
         <div id="logo">
-          <div><img src="img/toplogo2.png" alt="" /></div>
+          <div><img src="img/toplogo2.png" alt="sehyeon_logo" /></div>
           <!--                <span>김세현 / Kim SeHyeon</span>-->
         </div>
         <ul id="topMenu">
@@ -50,7 +50,7 @@
           <div id="home_right">
             <div id="home_right_txt">2020.09.START</div>
           </div>
-          <div id="home_bottom_txt">Responsive Web | Last Update 22.10.14</div>
+          <div id="home_bottom_txt">Responsive Web | Last Update 23.03.08</div>
           <hr class="home_line home_right_line" />
           <hr class="home_line home_left_line" />
           <hr class="home_line home_bottom_line" />
@@ -65,7 +65,7 @@
             <div class="pr_profile">
               <div><img src="img/sehyeon.jpg" alt="사진" /></div>
               <ul>
-                <li>김세현 / Kim SeHyeon</li>
+                <li>김세현 / Kim Se Hyeon</li>
                 <li><i class="fas fa-user"></i>Front-end developer</li>
                 <li><i class="fas fa-calendar"></i>1990.11.20</li>
                 <li><i class="fas fa-map-marker-alt"></i>서울 영등포구 거주</li>
@@ -73,46 +73,78 @@
             </div>
             <div class="right_box">
               <div class="pr_box edu_box">
-                <h3 class="pr_title edu_title">EDUCATION</h3>
+                <h3 class="pr_title edu_title">방송정보국제교육원</h3>
                 <div class="pr_date edu_date">
-                  <div>2012.03 - 2016.02</div>
-                  <div>
-                    2020.09 - 2021.01<br />
-                    <!-- (88일) -->
-                  </div>
-                  <br />
-                  <br />
-                  <br />
-                  <br />
-                  <br />
-                  <div style="padding-top: 6px">
-                    2022.07 - 2022.08<br />
-                    <!-- (총144시간) -->
-                  </div>
+                  <div>2020.09.15 - 2021.01.25</div>
                 </div>
                 <div class="pr_txt edu_txt">
-                  <div>조선대학교 | 중국어문화학과 (졸업)</div>
                   <div>디지털디자인 (웹디자인&amp;웹퍼블리싱)</div>
                   <ul>
-                    <li>- 교육기관: 방송정보국제교육원 (서울 영등포구)</li>
-                    <li>- 교육기간: 2020-09-15 ~ 2021-01-25</li>
+                    <li>- 웹 표준 및 웹 접근성을 준수한 웹사이트 코딩</li>
+                    <li>
+                      - 사용자 요구에 따른 PC, 모바일, 반응형 디자인 및
+                      웹퍼블리싱
+                    </li>
+                    <li>
+                      - CSS를 이용하여 다양한 화면 구현과 미디어쿼리로 반응형
+                      프로젝트
+                    </li>
                     <li>- 교육내용: HTML5, CSS3, JavaScript, jQuery</li>
-                    <br />
-                  </ul>
-                  <div>AI 양재 허브 개발자 양성 교육 (웹개발 Track)</div>
-                  <ul>
-                    <li>- 교육기관: AI 양재 허브 (서울 서초구)</li>
-                    <li>- 교육기간: 2022-07-04 ~ 2022-08-19</li>
-                    <li>- 교육내용: JavaScript, React, tensorflow</li>
-                  </ul>
-                  <div>청년취업사관학교 SeSAC (웹풀스택)</div>
-                  <ul>
-                    <li>- 교육기관: 청년취업사관학교 용산캠퍼스</li>
-                    <li>- 교육기간: 2022-10-25 ~</li>
-                    <li>- 교육내용:</li>
                   </ul>
                 </div>
               </div>
+              <!-- 시작======================== -->
+              <div class="pr_box edu_box">
+                <h3 class="pr_title edu_title">AI 양재 허브</h3>
+                <div class="pr_date edu_date">
+                  <div style="padding-top: 6px">2022.07.04 - 2022.08.19</div>
+                </div>
+                <div class="pr_txt edu_txt">
+                  <div>
+                    AI 양재 허브 개발자 양성 교육 (인공지능 웹개발 Track)
+                    <!-- (총144시간) -->
+                  </div>
+                  <ul>
+                    <li>- 웹프로그래밍 기초 및 JavaScript, React</li>
+                    <li>- Express.js, 데이터 베이스, NCP</li>
+                    <li>- 텐서플로우 활용</li>
+                  </ul>
+                </div>
+              </div>
+
+              <!-- 긑================ -->
+              <!-- 시작======================== -->
+              <div class="pr_box edu_box">
+                <h3 class="pr_title edu_title">청년취업사관학교 SeSAC</h3>
+                <div class="pr_date edu_date">
+                  <div style="padding-top: 6px">2022.10.25 - 현재</div>
+                </div>
+                <div class="pr_txt edu_txt">
+                  <div>풀스택 웹 융합 개발자 양성 과정 (용산캠퍼스)</div>
+                  <ul>
+                    <li>- 프론트엔드: HTML, CSS, JS, React, Bootstrap</li>
+                    <li>- 백엔드: Node.js, Express, MySql, amazon(EC2), NCP</li>
+                    <li>
+                      - 협업 툴을 이용한 팀프로젝트 경험: Git, GitHub, Notion
+                    </li>
+                  </ul>
+                </div>
+              </div>
+
+              <!-- 긑================ -->
+              <!-- <div class="pr_box cer_box">
+                <h3 class="pr_title cer_title">
+                  청년취업사관학교 SeSAC (웹풀스택)
+                </h3>
+                <div class="pr_date cer_date">
+                  <div>2022.10.25 ~</div>
+                  
+                </div>
+                <div class="pr_txt cer_txt">
+                  <div>Node.js MVC패턴</div>
+                  <div>React</div>
+                </div>
+              </div> -->
 
               <!-- <div class="pr_box cer_box">
                 <h3 class="pr_title cer_title">LICENSE</h3>
@@ -138,20 +170,37 @@
                           alt="github"
                         />
                       </li>
-                      <li>hyonie-Kim</li>
+                      <li>
+                        <a
+                          class="contact_point"
+                          href="https://github.com/hyonie-Kim"
+                          target="_blank"
+                          >hyonie-Kim</a
+                        >
+                      </li>
                     </ul>
                     <ul>
                       <li><img src="img/con01.png" alt="phone" /></li>
-                      <li>010-5838-4884</li>
+                      <li>
+                        <a class="contact_point" href="tel:010-5838-4884"
+                          >010-5838-4884</a
+                        >
+                      </li>
                     </ul>
                     <ul>
                       <li><img src="img/con2.png" alt="mail" /></li>
-                      <li>dev.hyonie@gmail.com</li>
+                      <li>
+                        <a
+                          class="contact_point"
+                          href="mailto:dev.hyonie@gmail.com"
+                          >dev.hyonie@gmail.com</a
+                        >
+                      </li>
                     </ul>
-                    <ul>
+                    <!-- <ul>
                       <li><img src="img/con3.png" alt="kakao" /></li>
                       <li>ID: sehyeon1120</li>
-                    </ul>
+                    </ul> -->
                   </div>
                 </div>
               </div>
@@ -164,7 +213,7 @@
       <!--section s1-->
       <div class="section s2">
         <div class="section_content section_content2">
-          <h2>SKILL</h2>
+          <h2>🔗SKILL</h2>
           <!-- <h2>Stacks 기술 스택</h2> -->
           <div class="skill_wrapper">
             <div class="skill_item">
@@ -172,27 +221,12 @@
               <h3 class="sk_title">Frontend</h3>
               <div class="sk_txt_box">
                 <ul class="sk_txt sk_txt1">
-                  <!-- <li>
-                    <img src="img/check2.png" alt="check" />웹 접근성 및 웹
-                    표준성을 준수한 코딩 가능
-                  </li>
                   <li>
-                    <img src="img/check2.png" alt="check" />시멘틱 마크업 및
-                    논리적 순서 마크업으로 코딩 가능
-                  </li>
-                  <li>
-                    <img src="img/check2.png" alt="check" />크로스 브라우징 구현
-                    가능
-                  </li>
-                  <li>
-                    <img src="img/check2.png" alt="check" />CSS 이용하여 다양한
-                    화면 구현 가능하며 미디어쿼리로 반응형 프로젝트 코딩 가능
-                  </li> -->
-                  <li>
-                    <img src="img/html.png" alt="html" />
-                  </li>
-                  <li>
-                    <img src="img/React_logo.png" alt="html" />
+                    <img
+                      src="img/Frontend.png"
+                      alt="html"
+                      style="background-color: #fff"
+                    />
                   </li>
                 </ul>
                 <div class="graph">
@@ -205,22 +239,12 @@
               <h3 class="sk_title">Backend</h3>
               <div class="sk_txt_box">
                 <ul class="sk_txt sk_txt1">
-                  <!-- <li>
-                    <img src="img/check2.png" alt="check" />제어문, 함수, 객체,
-                    이벤트 등 숙지 완료
-                  </li>
                   <li>
-                    <img src="img/check2.png" alt="check" />웹페이지 동적으로
-                    코딩 가능(슬라이드, 메뉴, 스크롤 등)
+                    <img src="img/Backend.png" alt="check" />
                   </li>
-                  <li>
-                    <img src="img/check2.png" alt="check" />제이쿼리 플러그인
-                    적용 가능(swiper, fullpage, aos, circular rotating slider
-                    등)
-                  </li> -->
                 </ul>
                 <div class="graph">
-                  <div class="graph_bar" style="width: 80%"></div>
+                  <div class="graph_bar" style="width: 75%"></div>
                 </div>
               </div>
             </div>
@@ -228,14 +252,14 @@
             <div class="skill_item">
               <h3 class="sk_title">Deployment</h3>
               <div class="sk_txt_box">
-                <!-- <ul class="sk_txt sk_txt2 sk_txt_office">
-                  <li><img src="img/check2.png" alt="check" />MS Word (중)</li>
+                <ul class="sk_txt sk_txt1">
                   <li>
-                    <img src="img/check2.png" alt="check" />MS Powerpoint (상)
+                    <img src="img/deployment.png" alt="deployment_logo" />
                   </li>
-                  <li><img src="img/check2.png" alt="check" />MS Excel (중)</li>
-                  <li><img src="img/check2.png" alt="check" />한글 (상)</li>
-                </ul> -->
+                </ul>
+                <div class="graph">
+                  <div class="graph_bar" style="width: 70%"></div>
+                </div>
               </div>
             </div>
             <!-- <div class="skill_item">
@@ -273,13 +297,16 @@
               <div class="sk_txt_box">
                 <ul class="sk_txt sk_txt2 sk_txt_design">
                   <li>
-                    <img src="img/check2.png" alt="check" />
-                    Git을 활용한 소스코드 버전 관리 및 협업을 할 수 있습니다.
+                    <img
+                      src="img/versioncontrol.png"
+                      alt="versionControl_Logo"
+                    />
+                    <!-- Git을 활용한 소스코드 버전 관리 및 협업을 할 수 있습니다. -->
                   </li>
-                  <li>
+                  <!-- <li>
                     <img src="img/check2.png" alt="check" />
                     Github, Gitlab등을 사용하여 프로젝트 관리 경험이 있습니다.
-                  </li>
+                  </li> -->
                   <!-- <li>
                     <img src="img/check2.png" alt="check" />사용자 요구에 따른
                     PC, 모바일, 반응형 디자인 및 웹퍼블리싱 가능
@@ -290,6 +317,9 @@
                   <li>
                     <img src="img/check2.png" alt="check" />Illustrator (중)
                   </li> -->
+                  <div class="graph">
+                    <div class="graph_bar" style="width: 70%"></div>
+                  </div>
                 </ul>
               </div>
             </div>
