feat: 깃허브 주소 추가

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
         <div class="section_content section_content3">
           <!-- 포트폴리오 1============================================== -->
           <div class="slide slide_1">
-            <h2>&lt;MileEASY&gt; MBTI 테스트 통한 여행지 추천 사이트</h2>
+            <!-- <h2>&lt;MileEASY&gt; MBTI 테스트 통한 여행지 추천 사이트</h2> -->
             <div class="pf_img_container">
               <div class="pf_img_1">
                 <img
@@ -360,6 +360,17 @@
               <div>
                 <span class="pf_name">역할:</span>
                 <span class="pf_txt">2022.12 (4인팀 프로젝트)</span>
+              </div>
+              <div>
+                <span class="pf_name">GitHub:</span>
+                <span class="pf_txt"
+                  ><a
+                    class="project_url"
+                    href="https://github.com/MileEASY"
+                    target="_blank"
+                    >https://github.com/MileEASY</a
+                  ></span
+                >
               </div>
               <div>
                 <span class="pf_name">Frontend: </span>
@@ -434,7 +445,7 @@
             </div>
           </div> -->
           <div class="slide slide_2">
-            <h2>search_library</h2>
+            <!-- <h2>search_library</h2> -->
             <div class="pf_img_container">
               <div class="pf_img_1">
                 <img
@@ -492,7 +503,7 @@
 
           <!-- 포트폴리오 3============================================== -->
           <div class="slide slide_3">
-            <h2>PORTFOLIO 2</h2>
+            <!-- <h2>PORTFOLIO 2</h2> -->
             <div class="pf_img_container">
               <div class="pf_img_1">
                 <img src="img/project_img2.png" alt="" />
