feat: 마일리지 수정업데이트중

--- a/index.html
+++ b/index.html
@@ -350,6 +350,26 @@
               <div class="mpf_img mpf_img_2">
                 <img src="img/mileEASY.png" alt="" />
               </div>
+              <div style="font-size: 16px; line-height: 1.7; padding: 7px 0">
+                <span style="font-weight: bold">
+                  MBTI 검사를 통해 자신의 성향의 맞게 여행지를 추천해주는 웹
+                  사이트입니다. &nbsp;</span
+                >길어지는 코로나19 유행 속에서 조금이나마 여행객들에 대한 갈증을
+                해소 하고자하는 저희 팀원들의 마음이 담겨져 있는 프로젝트
+                입니다. <br />
+
+                &nbsp;백엔드 개발자와 협업하는 과정에 관하여 배울수 있었습니다.
+                <br />
+                피그마를 활용하여 기획단계에서 형상을 잡고 api 명세와 그외
+                필요한 문서는 노션과 슬랙으로 작성하여 소통하였습니다.
+                <br />
+                UI &UX 화면구성에 대해 깊게 고민하였고, 로그인,회원가입 페이지에
+                애니메이션 CSS 트랜지션 속성을 활용하여 동적으로 구현하였습니다.
+                <br />
+                &nbsp;프로필페이지를 만들면서 파일전송을 위해 사용되는
+                multipart/form-data 에 대해 이해할수 있었습니다.
+              </div>
+              <hr />
               <div>
                 <span class="pf_name">주요기능:</span>
                 <span class="pf_txt"
@@ -359,7 +379,7 @@
               </div>
               <div>
                 <span class="pf_name">역할:</span>
-                <span class="pf_txt">2022.12 (4인팀 프로젝트)</span>
+                <span class="pf_txt">2022.12 (5인팀 프로젝트)</span>
               </div>
               <div>
                 <span class="pf_name">GitHub:</span>
@@ -494,9 +514,7 @@
                 <!-- <span class="pf_txt">HTML5, CSS3, jQuery, JavaScript</span> -->
               </div>
               <div class="pf_gosite">
-                <a href="https://sehyeon90.github.io/armani/" target="_blank"
-                  >GO SITE</a
-                >
+                <a href="http://3.35.216.78:3001/" target="_blank">GO SITE</a>
               </div>
             </div>
           </div>
