feat: 이미지 파일 업데이트

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 <ul class="sk_txt sk_txt1">
                   <li>
                     <img
-                      src="img/Frontend.png"
+                      src="img/frontend.png"
                       alt="html"
                       style="background-color: #fff"
                     />
@@ -240,7 +240,7 @@
               <div class="sk_txt_box">
                 <ul class="sk_txt sk_txt1">
                   <li>
-                    <img src="img/Backend.png" alt="check" />
+                    <img src="img/backend.png" alt="check" />
                   </li>
                 </ul>
                 <div class="graph">
